# showman

./: .gitignore  Cargo.toml  LICENSE  README.md  diesel.toml
assets/: db.txt
assets/migrations/2020-05-01-174111_init/: down.sql  up.sql
migrations/2019-09-20-085203_initialize_db/: down.sql  up.sql
rs-showman-api/: Cargo.toml
rs-showman-api/src/: lib.rs  macros.rs  server.rs
rs-showman-api/src/server/: shows.rs  users.rs
rs-showman-api/src/server/shows/: show_id.rs
rs-showman-api/src/server/users/: user_id.rs
rs-showman-auth/: Cargo.toml
rs-showman-auth-base/: Cargo.toml
rs-showman-auth-base/src/: claims.rs  lib.rs  macros.rs  session.rs  token.rs
rs-showman-auth-base/src/session/: authenticator.rs  claims.rs
rs-showman-auth/src/: lib.rs  server.rs
rs-showman-auth/src/server/: session.rs
rs-showman-cli/: Cargo.toml
rs-showman-cli/src/: interface.rs  lib.rs
rs-showman-core/: Cargo.toml
rs-showman-core/src/: error.rs  lib.rs
rs-showman-db/: Cargo.toml
rs-showman-db/src/: lib.rs  models.rs  schema.rs
rs-showman-db/src/models/: role.rs
rs-showman-gui/: Cargo.toml
rs-showman-gui/src/: lib.rs  macros.rs  preprocessor.rs  server.rs
rs-showman-gui/src/preprocessor/: settings.rs  template.rs  token.rs
showman-api/: Cargo.toml
showman-api/src/: lib.rs
showman-auth/: Cargo.toml
showman-auth/src/: lib.rs
showman-data/: Cargo.toml
showman-data-derive/: Cargo.toml
showman-data-derive/src/: context.rs  create.rs  delete.rs  lib.rs  load.rs  update.rs
showman-data/src/: crud.rs  lib.rs  models.rs  result.rs  schema.rs
showman-data/src/models/: characters.rs  props.rs  scenes.rs  shows.rs  sounds.rs  tracks.rs
showman-gui/: Cargo.toml
showman-gui/src/: env.rs  lib.rs
showman-gui/src/pages/: index.rs  show.rs
src/: cli.rs  lib.rs  main.rs
src/cli/: user.rs
www/: db.txt
www/error/: 401.html  403.html  404.html
www/gui/: index.html  login.html  register.html  shows.html  users.html
www/gui/shows/: new.html  {show_id}.html
www/gui/shows/{show_id}/: {scene_id}.html
www/gui/users/: {user_id}.html
www/pages/: __components.html  __page.html  __ribbon.html  index.html  script.html  show.html
www/static/: style.css
www/static/js/: lib.js  login.js  register.js  shows.js
www/static/js/shows/: new.js  show.js
www/static/js/users/: user.js
www/template/appbar/: admin.html  default.html  user.html
www/template/toolbar/: default.html
