[package]
name = "showman"
version = "0.1.0"
authors = ["Gianluca <gianluca.brian.94@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = [
    "rs-showman-api",
    "rs-showman-auth",
    "rs-showman-auth-base",
    "rs-showman-cli",
    "rs-showman-core",
    "rs-showman-db",
    "rs-showman-gui"
]

[dependencies]
actix-files = "0.1.4"
actix-rt = "0.2.5"
actix-web = { version = "1.0.7", features = ["rust-tls"] }
bcrypt = "0.5.0"
chrono = "0.4.9"
dialoguer = "0.4.0"
diesel = { version = "1.0.0", features = ["mysql", "chrono"] }
dotenv = "0.9.0"
futures = "0.1.29"
lazy_static = "1.4.0"
pem = "0.7.0"
regex = "1.3.1"
rustls = "^0.15"
serde = "1.0.101"
serde_derive = "1.0.101"
serde_json = "1.0.40"

showman-core = { path = "./rs-showman-core" }
showman-db = { path = "./rs-showman-db" }
showman-auth-base = { path = "./rs-showman-auth-base" }
showman-api = { path = "./rs-showman-api" }
showman-auth = { path = "./rs-showman-auth" }
showman-cli = { path = "./rs-showman-cli" }
showman-gui = { path = "./rs-showman-gui" }