[package]
name = "showman"
version = "0.1.0"
authors = ["Gianluca <gianluca.brian.94@gmail.com>"]
edition = "2018"

[workspace]
members = [
    "showman-api",
    "showman-auth",
    "showman-data",
    "showman-data-derive",
    "showman-gui"
]

[dependencies]
showman-api ={ path = "./showman-api" }
showman-auth ={ path = "./showman-auth" }
showman-data ={ path = "./showman-data" }
showman-gui ={ path = "./showman-gui" }
actix-cors = "0.2.0"
actix-rt = "1.1.1"
actix-web = "2.0.0"
diesel = { version = "1.4.4", features = ["chrono", "mysql", "r2d2"] }
dotenv = "0.15.0"