[package]
name = "showman-api"
version = "0.1.0"
authors = ["Gianluca <gianluca.brian@hotmail.it>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "1.0.7"
bcrypt = "0.5.0"
diesel = { version = "1.4.3", features = ["mysql", "chrono"] }
serde = "1.0.101"
serde_derive = "1.0.101"
validator = "0.10.0"
validator_derive = "0.10.0"

showman-core = { path = "../rs-showman-core" }
showman-db = { path = "../rs-showman-db" }