[package]
name = "showman-auth-base"
version = "0.1.0"
authors = ["Gianluca <gianluca.brian.94@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bcrypt = "0.5.0"
chrono = { version = "0.4", features = ["serde"] }
diesel = { version = "1.4.3", features = ["mysql", "chrono"] }
hex = "0.4.0"
jsonwebtoken = "6.0.1"
lazy_static = "1.4.0"
ring = "^0.14.4"
serde = "1.0.101"
serde_derive = "1.0.101"

showman-core = { path = "../rs-showman-core" }
showman-db = { path = "../rs-showman-db" }