[package]
name = "showman-auth"
version = "0.1.0"
authors = ["Gianluca <gianluca.brian@hotmail.it>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "1.0.7"
serde = "1.0.101"
serde_derive = "1.0.101"

showman-core = { path = "../rs-showman-core" }
showman-db = { path = "../rs-showman-db" }
showman-auth-base = { path = "../rs-showman-auth-base" }