[package]
name = "showman-core"
version = "0.1.0"
authors = ["Gianluca <gianluca.brian.94@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "1.0.7"
hex = "0.4.0"
ring = "^0.14"
serde = "1.0.101"