[package]
name = "showman-gui"
version = "0.1.0"
authors = ["Gianluca <gianluca.brian@hotmail.it>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-files = "0.1.4"
actix-web = "1.0.7"
lazy_static = "1.4.0"
regex = "1.3.1"

showman-core = { path = "../rs-showman-core" }
showman-db = { path = "../rs-showman-db" }
showman-auth-base = { path = "../rs-showman-auth-base" }