[package]
name = "showman-data"
version = "0.1.0"
authors = ["Gianluca <gianluca.brian@hotmail.it>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "2.0.0"
chrono = { version = "0.4.11", features = ["serde"] }
diesel = { version = "1.4.6", features = ["chrono", "mysql", "r2d2"] }
serde = { version = "1.0.106", features = ["derive"] }
serde_json = "1.0.52"
showman-data-derive = { path = "../showman-data-derive" }