[package]
name = "showman-gui"
version = "0.1.0"
authors = ["Gianluca <gianluca.brian@hotmail.it>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
showman-data = { path = "../showman-data" }
actix-files = "0.2.1"
actix-web = "2.0.0"
futures = "0.3.4"
lazy_static = "1.4.0"
serde = "1.0.106"
tera = "1.2.0"